--- a/FinalReport.Rnw
+++ b/FinalReport.Rnw
@@ -658,7 +658,7 @@ We have successfully worked with big data in different formats (.tif, web, coord
 
 \section{Final note}
 
-This work is completed under the theme of reproducible research and we have created a GitHub repository containing all the files. There have been challenges in maintaining a flow in the pull/commit/push steps throughout the work. Not only we have filled up the \textit{U:} drive space when downloading the large CDL data, but also we have confused GitHub when trying to upload the data on the web repository. When we tried to upload the data, the commit went through but we were not able to push. Hence, we has to use linux commands, such as \textit{git commit -m "commit message"} and take control in the command line. Also, the terminal server ts2.stat.iastate.edu crashed due to heavy load one day, when we were completing a commit. The files remained checked when git crushed. Once again, we used the linux commands, such as \textit{rm -f ./.git/index.lock} to unlock everything and be able to commit and push.\\
+This work is completed under the theme of reproducible research and we have created a GitHub repository containing all the files. There have been challenges in maintaining a flow in the pull/commit/push steps throughout the work. Not only we have filled up the \textit{U:} drive space when downloading the large CDL data, but also we have confused GitHub when trying to upload the data on the web repository. When we tried to upload the data, the commit went through but we were not able to push. Hence, we had to use linux commands, such as \textit{git commit -m "commit message"} and take control in the command line. Also, the terminal server ts2.stat.iastate.edu crashed due to heavy load one day, when we were completing a commit. The files remained checked when git crushed. Once again, we used the linux commands, such as \textit{rm -f ./.git/index.lock} to unlock everything and be able to commit and push. Finally, in order to remove the extra folder created from the \textit{.pdf} compilation using \textit{knitr}, we used the command line \textit{git rm -r --cached 'foldername'}. For example, \textit{git rm -r --cached cache} for the cached chunks (web scrapping the census data takes some time) and \textit{git rm -r --cached figure} for the figures (making the google maps takes some time, too).\\
 
 This report is available in my current GitHub repository, \url{https://github.com/andreeae/STAT585X-Project}, under \textit{FinalReport.Rnw}. The .pdf and the data are available upon request, as it can not be updated due to large size.
 
